--- a/Source/ui_macosx/en.lproj/AudioSettingsView.xib
+++ b/Source/ui_macosx/en.lproj/AudioSettingsView.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AudioSettingsViewController">
@@ -17,14 +18,19 @@
             <rect key="frame" x="0.0" y="0.0" width="540" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lXD-El-zxE">
-                    <rect key="frame" x="18" y="236" width="444" height="18"/>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="lXD-El-zxE">
+                    <rect key="frame" x="18" y="236" width="143" height="18"/>
                     <buttonCell key="cell" type="check" title="Enable audio output" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="f6z-Ah-CJu">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                 </button>
             </subviews>
+            <constraints>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lXD-El-zxE" secondAttribute="trailing" constant="20" symbolic="YES" id="bXL-Lp-jGV"/>
+                <constraint firstItem="lXD-El-zxE" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="20" symbolic="YES" id="fRj-a5-yb9"/>
+                <constraint firstItem="lXD-El-zxE" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="20" symbolic="YES" id="lQy-Pb-Y09"/>
+            </constraints>
         </customView>
     </objects>
 </document>
