--- a/Source/ui_macosx/en.lproj/VideoSettingsView.xib
+++ b/Source/ui_macosx/en.lproj/VideoSettingsView.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="VideoSettingsViewController">
@@ -18,21 +19,29 @@
             <rect key="frame" x="0.0" y="0.0" width="540" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KlQ-fX-KPJ">
-                    <rect key="frame" x="18" y="236" width="504" height="18"/>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="KlQ-fX-KPJ">
+                    <rect key="frame" x="18" y="236" width="194" height="18"/>
                     <buttonCell key="cell" type="check" title="Enable high resolution mode" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="ai7-lW-2iW">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                 </button>
-                <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FML-oH-x2V">
-                    <rect key="frame" x="18" y="216" width="504" height="18"/>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="FML-oH-x2V">
+                    <rect key="frame" x="18" y="216" width="154" height="18"/>
                     <buttonCell key="cell" type="check" title="Force bilinear filtering" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="bPM-Np-yZj">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                 </button>
             </subviews>
+            <constraints>
+                <constraint firstItem="KlQ-fX-KPJ" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="20" symbolic="YES" id="Dn0-uw-7dN"/>
+                <constraint firstItem="FML-oH-x2V" firstAttribute="leading" secondItem="KlQ-fX-KPJ" secondAttribute="leading" id="Eil-61-P03"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="FML-oH-x2V" secondAttribute="trailing" constant="20" symbolic="YES" id="PcY-hW-0SA"/>
+                <constraint firstItem="FML-oH-x2V" firstAttribute="top" secondItem="KlQ-fX-KPJ" secondAttribute="bottom" constant="6" symbolic="YES" id="chi-Mn-xr9"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="KlQ-fX-KPJ" secondAttribute="trailing" constant="20" symbolic="YES" id="nnm-2t-xge"/>
+                <constraint firstItem="KlQ-fX-KPJ" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="20" symbolic="YES" id="tAv-hs-1KJ"/>
+            </constraints>
         </customView>
     </objects>
 </document>
