--- a/Source/ui_macosx/en.lproj/PreferencesWindow.xib
+++ b/Source/ui_macosx/en.lproj/PreferencesWindow.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PreferencesWindowController">
@@ -39,11 +40,17 @@
                             <action selector="onToolBarButtonPressed:" target="-2" id="F4b-ar-aNK"/>
                         </connections>
                     </toolbarItem>
+                    <toolbarItem implicitItemIdentifier="A850254D-C6DB-4F62-A6D4-1605E4486027" label="GamePad" paletteLabel="GamePad" tag="3" image="NSComputer" selectable="YES" id="5FW-Q6-HzZ">
+                        <connections>
+                            <action selector="onToolBarButtonPressed:" target="-2" id="hxf-oK-WNE"/>
+                        </connections>
+                    </toolbarItem>
                 </allowedToolbarItems>
                 <defaultToolbarItems>
                     <toolbarItem reference="rwX-i3-mrU"/>
                     <toolbarItem reference="czM-Ls-onj"/>
                     <toolbarItem reference="SRE-jX-uO8"/>
+                    <toolbarItem reference="5FW-Q6-HzZ"/>
                 </defaultToolbarItems>
             </toolbar>
             <connections>
